删除key(作者有点傻hh)

--- a/RD.ipynb
+++ b/RD.ipynb
@@ -241,7 +241,7 @@
     "import os\n",
     "import zhipuai\n",
     "import sys\n",
-    "os.environ['ZHIPUAI_API_KEY'] = 'b441f069335a92a7f8679736ec1be3b9.1pnH2AoIw04JHMV1'\n",
+    "os.environ['ZHIPUAI_API_KEY'] = ''\n",
     "zhipuai.api_key = os.environ['ZHIPUAI_API_KEY']\n"
    ]
   },
